# Heirloom-Native

./: .gitignore  .gitmodules  Makefile  README.md  build_android.bat  build_linux.sh  build_windows.bat  miniaudio.c
android/: CMakeLists.txt
android/jni/: Android.mk
desktop/: CMakeLists.txt
src/: decoder.c  miniaudio.c
